[package]
description = "hbbft consensus protocol Engine"
name = "hbbft_engine"
version = "0.0.1"
license = "GPL-3.0"
authors = [
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "David Forstenlechner <dforsten@gmail.com>"
]

[lib]

[dependencies]
bincode = "1.1.2"
client-traits = { path = "../../client-traits" }
common-types = { path = "../../types" }
engine = { path = "../../engine" }
ethabi = "9.0.1"
ethabi-contract = "9.0.0"
ethabi-derive = "9.0.1"
ethcore-io = { path = "../../../util/io" }
ethcore-miner = { path = "../../../miner" }
ethereum-types = "0.8.0"
ethjson = { path = "../../../json" }
hbbft = { git = "https://github.com/poanetwork/hbbft", rev = "a652ca1eb584b34d1a49750acda1cb5d68df459a" }
hbbft_testing = { git = "https://github.com/poanetwork/hbbft" }
hex_fmt = "0.3.0"
itertools = "0.5"
keccak-hash = "0.1"
lazy_static = "1.3.0"
log = "0.4"
machine = { path = "../../machine" }
parity-crypto = { version = "0.4.2", features = ["publickey"] }
parking_lot = "0.6"
rand = "0.6.5"
rlp = "0.4.0"
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ethcore = { path = "../..", features = ["test-helpers"] }
ethcore-accounts = { path = "../../../accounts" }
proptest = "0.9.2"
spec = { path = "../../spec" }
toml = "0.5.1"

[features]
# Include tools to facilitate test setup.
test-helpers = ["ethcore/test-helpers"]
