[package]
description = "hbbft consensus protocol Engine"
name = "hbbft-engine"
version = "0.0.9"
license = "GPL-3.0"
authors = [
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "David Forstenlechner <dforsten@gmail.com>"
]

[lib]

[dependencies]
bincode = "1.1.2"
client-traits = { path = "../../client-traits" }
common-types = { path = "../../types" }
engine = { path = "../../engine" }
ethabi = "12.0"
ethabi-contract = "11.0"
ethabi-derive = "12.0"
ethcore-io = { path = "../../../util/io" }
ethcore-miner = { path = "../../../miner" }
ethereum-types = "0.9.0"
ethjson = { path = "../../../json" }
hbbft = { git = "https://github.com/poanetwork/hbbft", rev = "4857b7f9c7a0f513caca97c308d352c6a77fe5c2" }
hbbft_testing = { git = "https://github.com/poanetwork/hbbft" }
hex_fmt = "0.3.0"
itertools = "0.8.2"
keccak-hash = "0.5.0"
lazy_static = "1.3.0"
log = "0.4"
machine = { path = "../../machine" }
parity-crypto = { version = "0.6.1", features = ["publickey"] }
parking_lot = "0.10.0"
rand = "0.6.5"
rlp = "0.4.5"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ethcore = { path = "../..", features = ["test-helpers"] }
ethcore-accounts = { path = "../../../accounts" }
proptest = "0.9.2"
spec = { path = "../../spec" }
toml = "0.5.6"

[features]
# Include tools to facilitate test setup.
test-helpers = ["ethcore/test-helpers"]
