[package]
description = "parity config generator for hbbft validators"
name = "hbbft_config_generator"
version = "0.0.1"
license = "GPL-3.0"
authors = [
    "David Forstenlechner <dforsten@gmail.com>"
]

[dependencies]
bincode = "1.1.2"
client-traits = { path = "../../../client-traits" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hbbft = { git = "https://github.com/poanetwork/hbbft", rev = "2f12266526da6c162f9bcb1eea6f2cd0baaf6827" }
hbbft_testing = { git = "https://github.com/poanetwork/hbbft" }
toml = "0.5.1"
rand = "0.6.5"
clap = "2"
ethcore = { path = "../../.." }
ethkey = { path = "../../../../accounts/ethkey" }
ethstore = { path = "../../../../accounts/ethstore"}
parity-crypto = { version = "0.4.2", features = ["publickey"] }
rustc-hex = "1.0"

[dev-dependencies]
